# nyxion-backend

./: .gitignore  init_project.sh  main.py  package-lock.json  predictions.csv  pyproject.toml  setup.sh  testetme.py
app/: main.py
app/data/: koi_test.csv
app/models/: model.pkl  predict.py  train_koi.py
app/routes/: files.py  model.py  model_stats.py  predict.py  table.py  train.py  train_runner.py
app/services/: model_service.py
models/: xgb_koi_finetuned_46eab153-d238-4dae-afda-df36efd21431.joblib.manifest.json  xgb_koi_finetuned_6ca712e7-78fa-45f2-878a-c810f982c68f.joblib.manifest.json  xgb_koi_finetuned_6ca712e7-78fa-45f2-878a-c810f982c68f.joblib.metrics.json  xgb_koi_finetuned_71dae24d-ac6e-49fe-a46b-1e8299b5759f.joblib.manifest.json  xgb_koi_finetuned_71dae24d-ac6e-49fe-a46b-1e8299b5759f.joblib.metrics.json
models_cascade/: test_metrics_20251004_205101.json  test_predictions_20251004_205101.csv
models_cascade_2/: test_metrics_20251004_211849.json  test_predictions_20251004_211849.csv
models_cascade_3/: test_metrics_20251004_220941.json  test_metrics_20251004_221230.json  test_predictions_20251004_220941.csv
models_cascade_4/: test_metrics_20251004_222305.json  test_predictions_20251004_222305.csv
models_cascade_5/: test_metrics_20251004_222709.json  test_predictions_20251004_222709.csv
models_cascade_8/: test_metrics_20251004_223030.json  test_predictions_20251004_223030.csv
models_cascade_v66/: test_metrics_20251004_224739.json  test_predictions_20251004_224739.csv
src/: evaluate.py  predict.py  predict_postprocess.py
(+27 files in other folders)
